--- a/coronation/effectiveness.ipynb
+++ b/coronation/effectiveness.ipynb
@@ -119,7 +119,7 @@
     "    n_months = len(monthly_price)\n",
     "    spent_per_month = total_buy_amount / n_months\n",
     "    bought_monthly = np.sum(spent_per_month / monthly_price)\n",
-    "    print('Ration of low buying to regular buying:', bought_at_low_price/bought_monthly)\n",
+    "    print('Ratio of low buying to regular buying:', bought_at_low_price/bought_monthly)\n",
     "\n",
     "    # recent lookback plot\n",
     "    lookback_days = 30    \n",
